# unified-quality-orchestration-reporting-dashboard

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile.testo-runner  LICENSE  README.md  allurerc.mjs  app.py  docker-compose-rp.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  testosterone.yaml
.claude/: launch.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-on-main.yml  ci.yml  claude-cr.yml  commitlint.yml  docker-publish.yml  publish.yml
allure/: categories.json
allure-report/export/: influxDbData.txt
artifacts/: metrics.json
artifacts/allure-report/: index.html
artifacts/behavex-flow-tests/: events.ndjson  plan_result.json
artifacts/report/: index.html
artifacts/sample-all-frameworks/: events.ndjson  plan_result.json
artifacts/sample-all-frameworks-stochastic/: events.ndjson  plan_result.json
artifacts/sample-pytests/: events.ndjson  plan_result.json
ci/gitlab/: testo.external.gitlab-ci.yml  testo.gitlab-ci.yml  testo.tests.gitlab-ci.yml  uqo.gitlab-ci.yml
deploy/nginx/: allure-reports.conf
docs/: Index.md  ai_failure_summaries.md  changelog_automation_policy.md  ci_integrations_phase2.md  daily_engineering_digest_2026-05-06.md  daily_engineering_digest_2026-05-09.md  migration_streamlit_to_react.md  release_checklist_phase2_ci.md  release_checklist_phase2_ghost_mode.md  release_checklist_phase3_delta_engine.md  release_checklist_phase3_frontend_migration.md  release_checklist_phase3_unified_dashboard.md  release_checklist_phase4_ai.md
docs/.obsidian/: appearance.json  graph.json  workspace.json
docs/Architecture/: Architecture Overview.md  Deep Dive - Execution Logic.md
docs/Archive/: SUPERSEDED Phase-1 Foundation Plan.md
docs/CLI Commands/: Command Reference.md  Troubleshooting and Error Codes.md
docs/Processes & Guides/: CI-CD Pipeline Setup.md  E2E Harness Operations Guide.md  Phase 3 UI Migration Milestones.md  Publishing Docker Images.md  Publishing to PyPI.md  ReportPortal Local Setup Guide.md  Streamlit to React Migration Guide.md
docs/Prompts & Snippets/: AI Prompt Engineering Lab.md  Agent Context Guide.md
docs/Release Management/: Delta Comparison Policy.md  README.md  Release Checklist - Phase 1 Foundation.md  Release Checklist - Phase 2 CI Integrations.md  Release Checklist - Phase 2 Ghost Mode.md  Release Checklist - Phase 2 Runner Image.md  Release Checklist - Phase 3 Delta Engine.md  Release Checklist - Phase 3 Frontend Migration.md  Release Checklist - Phase 3 Unified Dashboard.md  Release Checklist - Phase 4 AI and Failure Analysis.md  release_checklist_phase1.md  release_checklist_phase2_ghost_mode.md  release_checklist_phase2_runner_image.md  release_checklist_phase3_delta_engine.md  release_checklist_phase3_frontend_migration.md  release_checklist_phase3_unified_dashboard.md  release_checklist_phase4_ai.md
docs/Roadmap & Strategy/: Product Roadmap.md  Project Audit - 2026-06-24.md  UQO Engineering Hub.md  V1 Release Roadmap.md
docs/Specs & ADRs/: Allure 3 Migration Plan.md  Historical - General Task Forward 2.0.md  Phase 3 Delta Comparison Engine Plan.md  Phase 3 Unified Dashboard Plan.md  Phase 4 BYOK and Failure Analysis.md  README.md  Repository Pattern - Database-Agnostic Refactor.md  Restore doctor, clean, watch, init CLI commands.md  uqo-core Library Packaging Plan.md
docs/Testing Workflows/: QA Strategies.md  Technical Debt Tracker.md
drop_in_hooks/: __init__.py  behavex_allure.py
drop_in_hooks/behave/: __init__.py  environment.py
engine/: __init__.py  command_builders.py  db.py  db_config.py  paths.py  report_generator.py  run_history.py  runners.py
engine/repository/: __init__.py  models.py
engine/services/: __init__.py  audit_service.py  event_drain.py  multi_run.py  report_service.py
examples/gitlab/: .gitlab-ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
infra/reportportal/: generate-api-key.py  seed-api-key.sql
integrations/github-action/: README.md  action.yml  run_uqo_action.py
reports/allure/: index.html
reports/extent/: index.html  summary.json
sample_target_repo/: mock_api.py
sample_target_repo/tests/: conftest.py
scripts/: check_changelog_format.py  reportportal-local.sh  write_allure_environment.py
testo_api/: cycle_execution_manager.py  dependencies.py  execution_manager.py  main.py  models.py
testo_api/routes/: ai.py  analytics.py  cycles.py  history.py  runs.py
testo_core/: __init__.py  command_builders.py  integrations.py  metrics.py  plugins_builtin.py  report_generator.py  run_history.py  runners.py  s3_client.py  sandbox_api.py  specs.py  triggers.py
testo_core/cli/: app.py  cleanup.py  deprecated.py  legacy.py  runner.py
testo_ui/: streamlit_app.py
tests/: README.md  TEST_LAYOUT.md  __init__.py  _allure_utils.py  conftest.py  test_audit_service.py  test_command_builders_extended.py  test_defaults_and_placeholders.py  test_integrations_more.py  test_integrations_unit.py  test_isolation_integrity.py  test_paths_behave_native.py  test_report_generator.py  test_report_generator_http.py  test_report_generator_locust.py  test_report_service_more.py  test_run_history_snapshot.py  test_run_history_unit.py  test_runners.py  test_runners_audit_mock.py  test_runners_unit.py
uqo_api/: __init__.py  dependencies.py  execution_manager.py  main.py  models.py
uqo_core/: __init__.py  cli.py  command_builders.py  db.py  db_config.py  integrations.py  metrics.py  metrics_extractor.py  orchestrator.py  paths.py  plugins_builtin.py  result_management.py  run_history.py  runners.py  s3_client.py  sandbox_api.py  specs.py
(+2311 files in other folders)
