[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "uqo-core"
version = "0.1.0"
description = "Unified Quality Orchestration core engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pluggy>=1.5.0",
    "docker>=7.0.0",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.32.0",
    "boto3>=1.34.0",
    "behave>=1.3.0,<2",
    "locust>=2.43.0",
    "behavex>=4.6.0",
    "allure-pytest>=2.15.0",
    "allure-behave>=2.15.0",
    "allure-python-commons>=2.15.0",
    "matplotlib>=3.10.0",
    "influxdb-client>=1.48.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.36.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["uqo_core"]
