[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "testo-core"
version = "0.1.0"
description = "Testosterone — unified quality orchestration core engine"
readme = "README.md"
requires-python = ">=3.11"
# Lean runtime: only what `testo run` and `testo report` strictly need.
# Anything UI-, API-, or DB-related must live in an extras group below.
dependencies = [
    "python-dotenv>=1.0.0",
    "pluggy>=1.5.0",
    "requests>=2.32.0",
    "behave>=1.3.0,<2",
    "behavex>=4.6.0",
    "allure-pytest>=2.15.0",
    "allure-behave>=2.15.0",
    "allure-python-commons>=2.15.0",
    "PyYAML>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "Jinja2>=3.1.0",
]

[project.scripts]
testo = "testo_core.cli.app:main"
uqo = "testo_core.cli.deprecated:main"
testo-ui = "testo_ui.entry:main"
testo-api = "testo_api.main:run"

[project.optional-dependencies]
ui = [
    "streamlit>=1.36.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9.0",
]
db = [
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2.0",
    "tomli-w>=1.0.0",
]
db_mysql = [
    "pymysql>=1.1.0",
]
docker = [
    "docker>=7.0.0",
]
metrics = [
    "matplotlib>=3.10.0",
    "influxdb-client>=1.48.0",
    "boto3>=1.34.0",
]
reporters = []
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "build>=1.2.0",
    # The dev profile installs every extra so the test suite covers the full
    # surface area without needing per-test installs.
    "testo-core[ui,api,db,docker,metrics]",
]

[tool.hatch.build.targets.wheel]
packages = ["testo_core", "testo_api", "testo_ui"]

[tool.hatch.build.targets.wheel.force-include]
"testo_core/reporting/reporters/templates" = "testo_core/reporting/reporters/templates"
